rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-0e15d1fce5b613e5.d
/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-0e15d1fce5b613e5: leading-comma.rs

/home/anthony/repos/github.com/playground/exercism/rust/macros/tests/invalid/target/debug/deps/leading_comma_rs-0e15d1fce5b613e5.d: leading-comma.rs

leading-comma.rs:
